# github-contrib-view

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mypy.yml  tests.yml
src/github_contrib_view/: __init__.py  config.py  constants.py  contrib.py  main.py  output.py  structures.py
